--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>First Project on VisualStudio</title>
-    <link href='file:///C:/Users/Simon/source/repos/FirstTime/StyleSheet1.css' rel='stylesheet'>
+    <link href='https://simonchung2.github.io/Travel-Adventures/StyleSheet1.css' rel='stylesheet'>
 </head>
 <body>
     <h1 id="Home">Travel Adventures</h1>
