--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h3>Toronto, Canada</h3>
                 </a>
                 <a href="C:\Users\Simon\source\repos\FirstTime\HTMLPage2.html">
-                    <img class='photolink' src="C:\Users\Simon\source\repos\FirstTime\Images\Toronto Skyline.jpg">
+                    <img class='photolink' src="https://simonchung2.github.io/Travel-Adventures/Images/Toronto Skyline.jpg">
                 </a>
             </section>
             <section class="city-block">
