--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="web-content">
             <section class="city-block">
-                <a href="C:\Users\Simon\source\repos\FirstTime\HTMLPage2.html">
+                <a href="https://simonchung2.github.io/Travel-Adventures/Other-Pages/2 Toronto.html">
                     <h3>Toronto, Canada</h3>
                 </a>
                 <a href="C:\Users\Simon\source\repos\FirstTime\HTMLPage2.html">
