--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://simonchung2.github.io/Travel-Adventures/Toronto/index.html">
                     <h3>Toronto, Canada</h3>
                 </a>
-                <a href="C:\Users\Simon\source\repos\FirstTime\HTMLPage2.html">
+                <a href="https://simonchung2.github.io/Travel-Adventures/Toronto/index.html">
                     <img class='photolink' src="https://simonchung2.github.io/Travel-Adventures/Images/Toronto Skyline.jpg">
                 </a>
             </section>
