--- a/Toronto/index.html
+++ b/Toronto/index.html
@@ -1,18 +1,25 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Toronto, Canada</title>
-    <link href='https://simonchung2.github.io/Travel-Adventures/StyleSheet1.css' rel='stylesheet'>
+    <link href='file:///C:\Users\Simon\Desktop\Travel Adventures\StyleSheet2.css' rel='stylesheet'>
 </head>
 </head>
 <body>
-    <h1 id="home2">Toronto, Canada</h1>
-    <p> The Toronto skyline is one of the most iconic in North America with the CN Tower looming high above the rest of the city and the Rogers Stadium not far from it.</p>
-    <img class='photolink2'src="C:\Users\Simon\source\repos\FirstTime\Images\Toronto Island.jpg">
-    <img class='photolink2'src="C:\Users\Simon\source\repos\FirstTime\Images\Toronto Sign.webp">
-    <img class='photolink2' src="C:\Users\Simon\source\repos\FirstTime\Images\Toronto Building.webp">
+    <h1>Toronto, Canada</h1>
+    <div class="photo">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Canada Sign.jpg">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Casa Loma.jpg">
+        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\CN Tower.jpg">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Gooderham Building.jpg">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Niagara Falls.jpg">
+        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Ripleys Aquarium.jpg">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Toronto Skyline.jpg">
+        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Union Station.jpg">
+        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Unionville.jpg">
+    </div>
 
 </body>
 </html>
