--- a/Toronto/index.html
+++ b/Toronto/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <title>Toronto, Canada</title>
-    <link href='file:///C:\Users\Simon\Desktop\Travel Adventures\StyleSheet2.css' rel='stylesheet'>
+    <link href='https://simonchung2.github.io/Travel-Adventures/StyleSheet2.css' rel='stylesheet'>
 </head>
 </head>
 <body>
     <h1>Toronto, Canada</h1>
     <div class="photo">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Canada Sign.jpg">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Casa Loma.jpg">
-        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\CN Tower.jpg">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Gooderham Building.jpg">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Niagara Falls.jpg">
-        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Ripleys Aquarium.jpg">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Toronto Skyline.jpg">
-        <img class='photolink'src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Union Station.jpg">
-        <img class='photolink' src="C:\Users\Simon\Desktop\Travel Adventures\Toronto\Pictures\Unionville.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Canada Sign.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Casa Loma.jpg">
+        <img class='photolink' src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/CN Tower.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Gooderham Building.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Niagara Falls.jpg">
+        <img class='photolink' src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Ripleys Aquarium.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Toronto Skyline.jpg">
+        <img class='photolink'src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Union Station.jpg">
+        <img class='photolink' src="https://simonchung2.github.io/Travel-Adventures/Toronto/Pictures/Unionville.jpg">
     </div>
 
 </body>
