--- a/Toronto/index.html
+++ b/Toronto/index.html
@@ -2,8 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" /
-          name = "viewport" 
+    <meta charset="utf-8" />
+    <meta name = "viewport" 
           content="width = device-width">
     <title>Toronto, Canada</title>
     <link href='https://simonchung2.github.io/Travel-Adventures/StyleSheet2.css' rel='stylesheet'>
